[tool.poetry]
name = "webhookExampleAiogram1"
version = "0.1.0"
description = ""
authors = ["andrei <dorofeichik9723@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.21"
asyncio = "^3.4.3"
databases = {extras = ["aiosqlite"], version = "^0.6.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
