[tool.poetry]
name = "CurrencyConverterBelBot"
version = "1.0.0"
description = ""
authors = ["andrei <dorofeichik9723@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
black = "^22.6.0"
requests = "^2.28.1"
aiogram = "^2.21"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
